tests/enums/faulty_generics.sy
Oop :: enum(*A)
    Just *A,
    Other *A,
    Nothing,
end

start :: fn do
    a := Oop.Just 1
    a = Oop.Other "abc"
end

// error: $Mismatch
